--- a/src/components/RestaurantBox.css
+++ b/src/components/RestaurantBox.css
@@ -1,19 +1,29 @@
 .section {
-    margin-top: 10px;
-    padding-top: 10px;
-    color: white;
-    border: thick double yellow ;
-    background-color: #de0d79;
-    border-radius: 30px;
-    text-align: center;
+  margin-top: 10px;
+  padding-top: 10px;
+  color: white;
+  border: thick double yellow;
+  background-color: #de0d79;
+  border-radius: 30px;
+  text-align: center;
 }
 
 .sublist {
-    height: 800px;
-    overflow-x: hidden; 
-    overflow-y: auto;
+  height: 800px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+.box-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 33px;
+}
+
+.rest-box {
+  display: flex;
 }
