--- a/src/components/ExtraRestaurants.css
+++ b/src/components/ExtraRestaurants.css
@@ -1,12 +1,16 @@
-.marker{
-    background: none;
-    border: none;
-    cursor: pointer;
+.marker {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 .marker img {
-    width: 33px;
-    height: 33px;
+  width: 33px;
+  height: 33px;
 }
 .restaurant-title {
-    text-align: center;
+  text-align: center;
+}
+.restaurant-image {
+  width: 350px;
+  height: 200px;
 }
