--- a/src/components/AddReviews.css
+++ b/src/components/AddReviews.css
@@ -8,8 +8,7 @@ ul {
 }
 
 .submit-review {
-  color: white;
-  background-color: teal;
+  background-color: #ffcc00;
   border-radius: 10px;
   margin-top: 15px;
 }
