--- a/src/components/FilterRestaurants.css
+++ b/src/components/FilterRestaurants.css
@@ -4,11 +4,10 @@
 .filter-feature {
   width: 100%;
   height: 50px;
-  background-color: cadetblue;
+  background-color: #ffcc00;
   font-size: 25px;
 }
 .label-data {
-  color: white;
   margin-right: 25px;
   margin-left: 25px;
 }
