--- a/src/components/RestaurantBox.css
+++ b/src/components/RestaurantBox.css
@@ -13,8 +13,7 @@
   border-radius: 15px;
   text-align: center;
   color: aliceblue;
-  /*background-color: #de0d79;*/
-  background-color: #e88b09;
+  background-color: #6600cc;
 }
 .restaurant-title {
   margin-top: 5px;
