--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .App {
-  max-width: 100%;
-  max-height: 100%;
+  max-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
